# crick

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
crick/: __init__.py  bioproblems.py  block.py  chain.py  cli.py  corpus.py  crypto.py  explorer.py  miner.py  node.py  params.py  puzzle.py
docs/: index.html  protocol.html
tests/: test_crick.py
tools/: build_corpus.py
