[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crick"
version = "0.1.0"
description = "A proof-of-work blockchain that mines solutions to NP-complete problems (DIPS protocol)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Carlos G. Oliver" }]
keywords = ["blockchain", "proof-of-work", "np-complete", "useful-work", "dips"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["ecdsa>=0.18"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
crick = "crick.cli:main"

[tool.setuptools.packages.find]
include = ["crick*"]
